Add emaill address change and rollback gengo notice

--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
                 </div>
             </div>
         </div>
+        <div class="row column">
+            <div class="card card-palette06 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">マイクロソフト サポート担当者の電子メールアドレス変更について </p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>平素よりマイクロソフト サポート サービスをご愛顧くださいましてありがとうございます。</p>
+                        <p>サポート案件管理システムの更新に伴い、2020 年 10 月よりサポート担当者が使用するメールアドレスが順次変更されます。新しいサポート案件管理システムでは、サポート担当者は @microsoftsupport.com ドメインの電子メール アドレスを使用して電子メールを送付いたします。 </p>
+                        <p>新しいサポート案件管理システムへの移行は段階的に行われるため、しばらくの間は従来の @microsoft.com ドメインの電子メール アドレスと新しい @microsoftsupport.com ドメインの電子メール アドレスの両方を使用いたします。 </p>
+                        <p>また、サポート担当者からの電子メールに返信する際は、電子メールの宛先や件名を変更せずに [全員に返信] としてくださいますようお願い申し上げます。 <p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <section class="section">
         <div class="row column">
@@ -530,6 +545,21 @@
             </div>
         </div>
     </section>
+    <div class="section section-palette03 section-half-palette01-half-palette01">
+        <div class="row column">
+            <div class="card card-palette03 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">新元号 (令和) 対応への取り組みに関するお知らせ</p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>2019 年 5 月の改元に伴い、ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。</p>
+                        <p><a href="http://aka.ms/jperaguide">http://aka.ms/jperaguide</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
