--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
         </div>
     </div>
     <div class="section section-palette03 section-half-palette01-half-palette01">
+                <div class="row column">
+            <div class="card card-palette06 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">マイクロソフト サポート担当者の電子メールアドレス変更について </p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>平素よりマイクロソフト サポート サービスをご愛顧くださいましてありがとうございます。</p>
+                        <p>サポート案件管理システムの更新に伴い、2020 年 10 月よりサポート担当者が使用するメールアドレスが順次変更されます。新しいサポート案件管理システムでは、サポート担当者は <b>@microsoftsupport.com</b> ドメインの電子メール アドレスを使用して電子メールを送付いたします。 </p>
+                        <p>新しいサポート案件管理システムへの移行は段階的に行われるため、しばらくの間は従来の @microsoft.com ドメインの電子メール アドレスと新しい @microsoftsupport.com ドメインの電子メール アドレスの両方を使用いたします。 </p>
+                        <p>また、サポート担当者からの電子メールに返信する際は、<b>電子メールの宛先や件名を変更せずに [全員に返信]</b> としてくださいますようお願い申し上げます。 <p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row column">
             <div class="card card-palette09 card-size3 card-shadow">
                 <div class="row row-middled-flex">
@@ -88,21 +103,6 @@
                             ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。<br/>
                             24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
                           </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row column">
-            <div class="card card-palette06 card-size3 card-shadow">
-                <div class="row row-middled-flex">
-                    <div class="column medium-3 text-center">
-                        <p class="text-heading4">マイクロソフト サポート担当者の電子メールアドレス変更について </p>
-                    </div>
-                    <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>平素よりマイクロソフト サポート サービスをご愛顧くださいましてありがとうございます。</p>
-                        <p>サポート案件管理システムの更新に伴い、2020 年 10 月よりサポート担当者が使用するメールアドレスが順次変更されます。新しいサポート案件管理システムでは、サポート担当者は @microsoftsupport.com ドメインの電子メール アドレスを使用して電子メールを送付いたします。 </p>
-                        <p>新しいサポート案件管理システムへの移行は段階的に行われるため、しばらくの間は従来の @microsoft.com ドメインの電子メール アドレスと新しい @microsoftsupport.com ドメインの電子メール アドレスの両方を使用いたします。 </p>
-                        <p>また、サポート担当者からの電子メールに返信する際は、電子メールの宛先や件名を変更せずに [全員に返信] としてくださいますようお願い申し上げます。 <p>
                     </div>
                 </div>
             </div>
