--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポートサービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
                             　- <u><a href="https://partner.microsoft.com/ja-jp/training/technical-presales-deployment-services">クラウド ビジネス相談センター</a></u><br/>
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
-                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
+                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) 購入前窓口</a></u><br/>   
                           </p>
                           <p>
                             24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
