Update WDK, Add IoT and ML, Update icons

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="section section-palette03 section-half-palette01-half-palette01">
-                <div class="row column">
+        <div class="row column">
             <div class="card card-palette06 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
@@ -73,35 +73,6 @@
                         <p>サポート案件管理システムの更新に伴い、2020 年 10 月よりサポート担当者が使用するメールアドレスが順次変更されます。新しいサポート案件管理システムでは、サポート担当者は <b>@microsoftsupport.com</b> ドメインの電子メール アドレスを使用して電子メールを送付いたします。 </p>
                         <p>新しいサポート案件管理システムへの移行は段階的に行われるため、しばらくの間は従来の @microsoft.com ドメインの電子メール アドレスと新しい @microsoftsupport.com ドメインの電子メール アドレスの両方を使用いたします。 </p>
                         <p>また、サポート担当者からの電子メールに返信する際は、<b>電子メールの宛先や件名を変更せずに [全員に返信]</b> としてくださいますようお願い申し上げます。 <p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row column">
-            <div class="card card-palette09 card-size3 card-shadow">
-                <div class="row row-middled-flex">
-                    <div class="column medium-3 text-center">
-                        <p class="text-heading4">年末年始のサポート窓口休業のお知らせ</p>
-                    </div>
-                    <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>
-                            【休業日】<br/>
-                            年末年始の通常サポート窓口は、下記の期間休業となります。<br/>
-                            2020 年 12 月 29 日 (火) 17:30 から 2021 年 1 月 5 日 (火) 9:00 まで
-                        </p>
-                        <p>
-                            翌年の通常サポート開始は、2021 年 1 月 5 日 (火) 9:00 からです。 <br/>
-                        <p>
-                        <p>
-                            【休業する窓口】<br/>
-                            　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポートサービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
-                            　- <u><a href="https://partner.microsoft.com/ja-jp/training/technical-presales-deployment-services">クラウド ビジネス相談センター</a></u><br/>
-                            　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
-                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) 購入前窓口</a></u><br/>   
-                          </p>
-                          <p>
-                            24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
-                          </p>
                     </div>
                 </div>
             </div>
@@ -200,7 +171,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure Virtual Machine_COLOR.png">
+                        <img width=64 height=64 src="./images/10021-icon-service-Virtual-Machine.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -214,7 +185,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure subscription.png">
+                        <img width=64 height=64 src="./images/10111-icon-service-User-Subscriptions.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -228,7 +199,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure Backup_COLOR.png">
+                        <img width=64 height=64 src="./images/00017-icon-service-Recovery-Services-Vaults.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -241,7 +212,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Monitor.png">
+                        <img width=64 height=64 src="./images/00438-icon-service-SAP-Azure-Monitor.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -254,7 +225,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure App Service - Azure API Apps.png">
+                        <img width=64 height=64 src="./images/10035-icon-service-App-Services.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -269,7 +240,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Bot Services.png">
+                        <img width=64 height=64 src="./images/10165-icon-service-Bot-Services.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -283,7 +254,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure Active Directory.png">
+                        <img width=64 height=64 src="./images/10221-icon-service-Azure-Active-Directory.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -292,6 +263,45 @@
                         <p>Azure AD、Active Directory Federation Service, Azure Active Directory Connect などを扱うサポート チームです。</p>
                         <p><a href="https://blogs.technet.microsoft.com/jpazureid/">以前のブログ (アーカイブ) はこちら</a></p>
                         <p><a href="https://techcommunity.microsoft.com/t5/Azure-Active-Directory-Identity/bg-p/Identity">米国の Azure Active Directory Identity Blog はこちら</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/10162-icon-service-Cognitive-Services.svg">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpmlblog.github.io/blog/">Japan Azure Machine Learning サポート チーム</a>
+                        </h3>
+                        <p>日本の Azure Machine Learning サポートチームより、仕様に関する情報やトラブル シューティングの手順、実装におけるワンポイント アドバイスをご紹介いたします。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/10162-icon-service-Cognitive-Services.svg">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpaiblog.github.io/blog/">Japan Azure Cognitive Services サポートチーム</a>
+                        </h3>
+                        <p>日本の Azure Cognitive Services サポートチームより、仕様に関する情報やトラブル シューティングの手順、実装におけるワンポイント アドバイスをご紹介いたします。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/10182-icon-service-IoT-Hub.svg">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpiotblog.github.io/blog/">Japan IoT サポートチーム</a>
+                        </h3>
+                        <p>日本の IoT サポートチームより、Windows IoT 製品 (Device Lockdown 機能を含む) や、Azure IoT 製品について、仕様に関する情報やトラブル シューティングの手順、実装におけるワンポイント アドバイスをご紹介いたします。</p>
                     </div>
                 </div>
             </div>
@@ -321,7 +331,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Azure Security Center.png">
+                        <img width=64 height=64 src="./images/10248-icon-service-Azure-Sentinel.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
@@ -442,7 +452,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=wdksupportteamja">Windows Driver Kit サポートチーム フォーラム</a>
+                            <a href="https://jpwdkblog.github.io/blog/">Windows Driver Kit サポートチーム</a>
                         </h3>
                         <p>WDK は、デバイス ドライバを開発するツールやサンプル コードがパッケージされた製品です。私たち WDK サポート チームは、今までに蓄積してきたノウハウを発信していきたいと思います。
                         </p>
