--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                         <h3 class="text-heading4">
                             <a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">Microsoft Japan Unified Communication Support Team</a>
                         </h3>
-                        <p>日本マイクロソフト Unified Communication サポート チームによる Microsoft Teams と Skype for Business (Lync)
-                            関連フォーラムです。</p>
+                        <p>日本マイクロソフト Unified Communication サポート チームによる Microsoft Teams と Skype for Business (Lync) 関連フォーラムです。</p>
                     </div>
                 </div>
             </div>
@@ -189,9 +188,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure Subscription Management Support Team</a>
+                            <a href="https://jpazasms.github.io/blog/">Azure Subscription Management Support Team</a>
                         </h3>
                         <p>日本 Microsoft のサポート チームから Azure の課金およびサブスクリプションについて情報をお届けします。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">以前のフォーラム (アーカイブ) はこちら</a></p>
                         <p><a href="https://blogs.msdn.microsoft.com/dsazurejp/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
