Update UC team link

--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Skype.png">
+                        <img width=64 height=64 src="./images/uc.jpg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">Microsoft Japan Unified Communication Support Team</a>
+                            <a href="https://jpucsupport.github.io/blog/">Microsoft Japan Unified Communication Support Team</a>
                         </h3>
-                        <p>日本マイクロソフト Unified Communication サポート チームによる Microsoft Teams と Skype for Business (Lync) 関連フォーラムです。</p>
+                        <p>日本マイクロソフトの Teams と Skype for Business に関連するサポート情報のブログです。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
