Update index.html for Endpoint Manager.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <section class="section">
         <div class="row column">
             <a name="windows">
-                <h2>Windows / Security / System Center サポート</h2>
+                <h2>Windows / Security / System Center / Endpoint Manager サポート</h2>
             </a>
         </div>
         <div class="row row-size2 medium-up-2">
@@ -376,9 +376,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">Japan SCCM & WSUS Support Team</a>
+                            <a href="https://jpmem.github.io/blog/">Japan MECM & WSUS Support Team</a>
                         </h3>
-                        <p>System Center Configuration Manager (SCCM) と WSUS に関する情報提供について、本フォーラムにてご案内いたします。</p>
+                        <p>Microsoft Endpoint Configuration Manager (MECM) と WSUS に関する情報提供について、本フォーラムにてご案内いたします。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
