--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         <h3 class="text-heading4">
                             <a href="https://jpmem.github.io/blog/">Japan Microsoft Endpoint Manager Support Team</a>
                         </h3>
-                        <p>Microsoft Endpoint Configuration Manager (MECM) と Microsoft Intune、WSUS に関する情報提供について、本フォーラムにてご案内いたします。</p>
+                        <p>Microsoft Endpoint Configuration Manager (MECM) と Microsoft Intune、WSUS に関する情報提供について、本ブログにてご案内いたします。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
