--- a/index.html
+++ b/index.html
@@ -215,9 +215,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpama">Japan Azure Monitoring and Automation</a>
+                            <a href="https://jpazmon-integ.github.io/blog/">Japan Azure Monitoring and Automation</a>
                         </h3>
-                        <p>OMS（Log Analytics）や Automation に関するサポート チームのフォーラムです。</p>
+                        <p>Azure Monitor や Integration 製品 (Azure Logic Apps など) に関して、サポート チームより情報を発信します。</p>
+                        <p><a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpama">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
