--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                             　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポートサービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
                             　- <u><a href="https://dynamics.microsoft.com/ja-jp/support/">Dynamics 365 / Power Platform サポート</a></u><br/>   
+                            　- <u><a href="https://partner.microsoft.com/ja-jp/training/technical-presales-deployment-services">クラウド ビジネス相談センター</a></u><br/>   
                           </p>
                           <p>ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。24 時間サポートのご契約をお持ちのお客様につきましては、上記休業期間中も サーバー ダウンなどの、危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
                           </p>
