add Power BI support team blog

--- a/index.html
+++ b/index.html
@@ -580,6 +580,28 @@
             </div>
         </div>
     </section>
+    <section class="section">
+        <div class="row column">
+            <a name="dynamics">
+                <h2>Power BI サポート</h2>
+            </a>
+        </div>
+        <div class="row row-size2 medium-up-2">
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/powerbi.png">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpbap-sqlbi.github.io/blog/">Power BI サポート チーム</a>
+                        </h3>
+                        <p>日本マイクロソフト Power BI サポートチームのブログです。チームの担当製品である Power BI の情報を中心にお届けします。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="section section-palette03 section-half-palette01-half-palette01">
         <div class="row column">
             <div class="card card-palette03 card-size3 card-shadow">
