update links, descriptions for security and identity manager

--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
                     <div class="column medium-10">
                         <h3 class="text-heading4">
                             <a
-                                href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpsecurity">Security</a>
+                                href="https://jp-sec.github.io/blog/">Security</a>
                         </h3>
-                        <p>セキュリティ製品に関するサポート チームのフォーラムです。</p>
+                        <p>セキュリティ製品に関する情報提供について、本ブログにてご案内いたします</p>
                     </div>
                 </div>
             </div>
@@ -362,9 +362,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpidentitymanager">Identity Manager</a>
+                            <a href="https://jp-sec.github.io/blog/">Identity Manager</a>
                         </h3>
-                        <p>Identity Manager サポート チームのサポート フォーラムです。</p>
+                        <p>Identity Manager 製品に関する情報提供について、本ブログにてご案内いたします。</p>
                     </div>
                 </div>
             </div>
