--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
                         <h3 class="text-heading4">
                             <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpabrs">Japan Azure Backup and Recovery Services</a>
                         </h3>
-                        <p>Azure Backup と Azure Site Recovery に関するサポート チームのフォーラムです。</p>
+                        <p>Azure Backup と Azure Site Recovery に関するサポート チームより情報を発信します。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpabrs">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
