--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpabrs">Japan Azure Backup and Recovery Services</a>
+                            <a href="https://jpabrs.github.io/blog/">Japan Azure Backup and Recovery Services</a>
                         </h3>
                         <p>Azure Backup と Azure Site Recovery に関するサポート チームより情報を発信します。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpabrs">以前のフォーラム (アーカイブ) はこちら</a></p>
