--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="http://aka.ms/dynamics-support-forum">Dynamics 365 Customer Engagement/CRM サポート</a>
+                            <a href="https://jpdynamicscrm.github.io/blog/">Dynamics 365 CRM & Power Platform サポート</a>
                         </h3>
-                        <p>Dynamics 365 Customer Engagement (CRM) サポート チームのサポート フォーラムです</p>
+                        <p>日本の Dynamics 365 CRM & Power Platform サポート チームのブログです。Dynamics 365 CRM / Power Automate / Power Apps / Power Virtual Agents に関する情報をお届けします。</p>
                     </div>
                 </div>
             </div>
