Update office support team link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=officesupportteamja">Office サポート チーム フォーラム</a>
+                            <a href="https://officesupportjp.github.io/blog/">Office サポート チーム フォーラム</a>
                         </h3>
                         <p>Office クライアント製品に関して、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
