Update Dynamics 365 Finance and Operations

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://blogs.msdn.microsoft.com/axjapan/">Dynamics 365 Finance and Operations/AX サポート チーム</a>
+                            <a href="https://jpdynamicserp.github.io/blog/">Dynamics 365 Finance and Operations/AX サポート チーム</a>
                         </h3>
                         <p>Dynamics 365 Finance and Operations および、Dynamics AX に関して、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
                     </div>
