Update organizational changes in ABRS and integ

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://jpabrs-scem.github.io/blog/">Japan CSS ABRS & SCEM</a>
+                            <a href="https://jpabrs-scem.github.io/blog/">Japan CSS ABRS</a>
                         </h3>
-                        <p>Azure Backup と Azure Site Recovery、および System Center 製品 (Operations Manager、Virtual Machine Manager、Orchestrator、Service Manager) に関するサポート チームより情報を発信します。</p>
+                        <p>Azure Backup と Azure Site Recoveryに関するサポート チームより情報を発信します。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpabrs">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
@@ -216,10 +216,23 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://jpazmon-integ.github.io/blog/">Japan Azure Monitoring and Integration</a>
+                            <a href="https://jpazmon-integ.github.io/blog/">Japan Azure Monitoring Support team</a>
                         </h3>
-                        <p>Azure Monitor や Integration 製品 (Azure Logic Apps など) に関して、サポート チームより情報を発信します。</p>
+                        <p>Azure Monitor 製品 (Azure Log Analytics や Application Insights、Azure Automation など) に関して、サポート チームより情報を発信します。</p>
                         <p><a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpama">以前のフォーラム (アーカイブ) はこちら</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/00438-icon-service-SAP-Azure-Monitor.svg">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpazinteg.github.io/blog/">Japan Integration Support team</a>
+                        </h3>
+                        <p>Logic App を中心として Integration 製品に関する情報をサポート チームより発信します。</p>
                     </div>
                 </div>
             </div>
@@ -336,8 +349,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a
-                                href="https://jp-sec.github.io/blog/">Security</a>
+                            <a href="https://jp-sec.github.io/blog/">Security</a>
                         </h3>
                         <p>セキュリティ製品に関する情報提供について、本ブログにてご案内いたします</p>
                     </div>
@@ -350,9 +362,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=systemcenterjp">System Center Team Japan</a>
+                            <a href="https://jpsystemcenter.github.io/blog/">Japan System Center Support team</a>
                         </h3>
-                        <p>System Center サポート チームのサポート フォーラムです。</p>
+                        <p>System Center 製品 (System Center Operations Manager や System Center Virtual Machine Manager など) に関して、サポート チームより情報を発信します。</p>
+                        <p><a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=systemcenterjp">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
