--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <h3 class="text-heading4">
                             <a href="https://jpabrs-scem.github.io/blog/">Japan CSS ABRS</a>
                         </h3>
-                        <p>Azure Backup と Azure Site Recoveryに関するサポート チームより情報を発信します。</p>
+                        <p>Azure Backup と Azure Site Recovery のサポート チームより情報を発信します。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpabrs">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
