Update icons and description

--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/00438-icon-service-SAP-Azure-Monitor.svg">
+                        <img width=64 height=64 src="./images/10201-icon-service-Logic-Apps.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
                             <a href="https://jpazinteg.github.io/blog/">Japan Integration Support team</a>
                         </h3>
-                        <p>Logic App を中心として Integration 製品に関する情報をサポート チームより発信します。</p>
+                        <p>Logic Apps を中心として Integration 製品に関する情報をサポート チームより発信します。</p>
                     </div>
                 </div>
             </div>
@@ -358,7 +358,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Windows.png">
+                        <img width=90 height=64 src="./images/SystemCenter.png">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
