Update email change notice
Update email change notice

--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
             <div class="card card-palette06 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
-                        <p class="text-heading4">マイクロソフト サポート担当者の電子メールアドレス変更について </p>
+                        <p class="text-heading4">マイクロソフト サポート担当者の電子メール アドレス変更</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>平素よりマイクロソフト サポート サービスをご愛顧くださいましてありがとうございます。</p>
-                        <p>サポート案件管理システムの更新に伴い、2020 年 10 月よりサポート担当者が使用するメールアドレスが順次変更されます。新しいサポート案件管理システムでは、サポート担当者は <b>@microsoftsupport.com</b> ドメインの電子メール アドレスを使用して電子メールを送付いたします。 </p>
-                        <p>新しいサポート案件管理システムへの移行は段階的に行われるため、しばらくの間は従来の @microsoft.com ドメインの電子メール アドレスと新しい @microsoftsupport.com ドメインの電子メール アドレスの両方を使用いたします。 </p>
-                        <p>また、サポート担当者からの電子メールに返信する際は、<b>電子メールの宛先や件名を変更せずに [全員に返信]</b> としてくださいますようお願い申し上げます。 <p>
+                        <p>サポート案件管理システムの更新に伴い、2022 年 6 月 26 日以降サポート担当者が使用するメール アドレスが順次変更されます。</p>
+                        <p>更新後のサポート案件管理システムでは、サポート担当者は @microsoftsupport.com ドメインの電子メール アドレスに加えて、@microsoft.com ならびに @mail.support.microsoft.com のドメインの電子メール アドレスを利用いたします。</p>
+                        <p>サポート担当者からの電子メールに返信する際は、電子メールの宛先や件名を変更せずに [全員に返信] としてくださいますようお願い申し上げます。</p>
                     </div>
                 </div>
             </div>
