move endpoint manager team blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="linkList initial-list">
                     <li>
                         <a href="#office" data-event="global-navigation-secondarynav-clicked-topmenu"
-                            data-above-section="true">Office/Exchange/SharePoint/Teams</a>
+                            data-above-section="true">Office/Exchange/SharePoint/Teams/Endpoint Manager</a>
                     </li>
                     <li>
                         <a href="#azure" data-event="global-navigation-secondarynav-clicked-topmenu"
@@ -80,7 +80,7 @@
     <section class="section">
         <div class="row column">
             <a name="office">
-                <h2>Office / Exchange / SharePoint / Teams サポート</h2>
+                <h2>Office / Exchange / SharePoint / Teams / Endpoint Manager サポート</h2>
             </a>
         </div>
         <div class="row">
@@ -155,6 +155,20 @@
                         </h3>
                         <p>日本マイクロソフトの Teams と Skype for Business に関連するサポート情報のブログです。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">以前のフォーラム (アーカイブ) はこちら</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/Windows.png">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://jpmem.github.io/blog/">Japan Microsoft Endpoint Manager Support Team</a>
+                        </h3>
+                        <p>Microsoft Endpoint Configuration Manager (MECM) と Microsoft Intune、WSUS に関する情報提供について、本ブログにてご案内いたします。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -323,7 +337,7 @@
     <section class="section">
         <div class="row column">
             <a name="windows">
-                <h2>Windows / Security / System Center / Endpoint Manager サポート</h2>
+                <h2>Windows / Security / System Center サポート</h2>
             </a>
         </div>
         <div class="row row-size2 medium-up-2">
@@ -378,20 +392,6 @@
                             <a href="https://jp-sec.github.io/blog/">Identity Manager</a>
                         </h3>
                         <p>Identity Manager 製品に関する情報提供について、本ブログにてご案内いたします。</p>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="row">
-                    <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Windows.png">
-                    </div>
-                    <div class="column medium-10">
-                        <h3 class="text-heading4">
-                            <a href="https://jpmem.github.io/blog/">Japan Microsoft Endpoint Manager Support Team</a>
-                        </h3>
-                        <p>Microsoft Endpoint Configuration Manager (MECM) と Microsoft Intune、WSUS に関する情報提供について、本ブログにてご案内いたします。</p>
-                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
