update icon of Endpoint Manager

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column medium-2 text-center">
-                        <img width=64 height=64 src="./images/Windows.png">
+                        <img width=64 height=64 src="./images/10343-icon-service-Intune-For-Education.svg">
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
