--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="section">
         <div class="row column">
             <a name="office">
-                <h2>Office / Exchange / SharePoint / Teams / Endpoint Manager サポート</h2>
+                <h2>Office / Exchange / SharePoint / Teams / Microsoft Intune サポート</h2>
             </a>
         </div>
         <div class="row">
@@ -167,7 +167,7 @@
                         <h3 class="text-heading4">
                             <a href="https://jpmem.github.io/blog/">Japan Microsoft Endpoint Manager Support Team</a>
                         </h3>
-                        <p>Microsoft Endpoint Configuration Manager (MECM) と Microsoft Intune、WSUS に関する情報提供について、本ブログにてご案内いたします。</p>
+                        <p>Microsoft Configuration Manager と Microsoft Intune、WSUS、Windows 365 に関する情報提供について、本ブログにてご案内いたします。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
