update category name of Intune

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://jpmem.github.io/blog/">Japan Microsoft Endpoint Manager Support Team</a>
+                            <a href="https://jpmem.github.io/blog/">Japan Microsoft Intune Support Team</a>
                         </h3>
-                        <p>Microsoft Configuration Manager と Microsoft Intune、WSUS、Windows 365 に関する情報提供について、本ブログにてご案内いたします。</p>
+                        <p>Microsoft Intune、Microsoft Configuration Manager、Windows 365、WSUS に関する情報提供について、本ブログにてご案内いたします。</p>
                         <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
