--- a/index.html
+++ b/index.html
@@ -63,6 +63,30 @@
     </div>
     <div class="section section-palette03 section-half-palette01-half-palette01">
         <div class="row column">
+            <div class="card card-palette09 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">2022 年 年末年始のサポート窓口休業のお知らせ</p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>
+                            【休業日】<br>
+2022 年 12 月 29 日 (木) 17:30 から 2023 年 1 月 5 日 (木) 9:00 まで<br>
+翌年の通常サポート開始は、2023 年 1 月 5 日 (木) 9:00 からとなります。<br>
+                        <p>
+                        <p>
+                            【休業する窓口】<br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポート サービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
+                            　- <u><a href="https://partner.microsoft.com/ja-jp/training/technical-presales-deployment-services">クラウド ビジネス相談センター</a></u><br/>   
+                            　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
+                          </p>
+                          <p>24 時間サポートのご契約をお持ちのお客様につきましては、上記休業期間中も サーバー ダウンなどの、危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
+                          </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row column">
             <div class="card card-palette06 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
