--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="card card-palette09 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
-                        <p class="text-heading4">2022 年 年末年始のサポート窓口休業のお知らせ</p>
+                        <p class="text-heading4">年末年始のサポート窓口休業のお知らせ</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
                         <p>
